feat: working on first view of main gallery. images api call

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL=https://api.nasa.gov
+VITE_API_URL_IMAGES=https://images-api.nasa.gov
 VITE_API_KEY=yJdr4wmi6JBoJQq1bgt5jR7g19AUGN85Blh5M86v
