--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-masonry-css": "^1.0.16",
-    "react-photoswipe-gallery": "^3.0.1"
+    "react-photoswipe-gallery": "^3.0.1",
+    "react-router-dom": "^6.22.1",
+    "react-toggle": "^4.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-toggle": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
